"spaced out sections evenly" "modfied nav links border radius"

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </span>
       </div>
       <div class="section wide" id="military-grade">
-        <img class="red-belt" src="images/Black-Paracord-Belt.JPG" alt="picture of a black paracord belt"> 
+        <img class="red-belt black-belt-image" src="images/Black-Paracord-Belt.JPG" alt="picture of a black paracord belt"> 
         <span class="section-text">
           <h2 id="custom-styling"><span>Custom</span> Styling</h2>
           <p>
@@ -45,9 +45,9 @@
       </div>
       <div class="section" id="key-features">
         <span class="section-text">
-          <h2 id="key-features">Key Features</h2> <!--Add Title for point-->
+          <h2 id="key-features">Key Features</h2>
           <p>
-            Why choose our belts? Here's what sets them apart: <!-- change paragraph to be relevant-->
+            Why choose our belts? Here's what sets them apart: 
           </p>
           <hr>
         </span>
