"added logo to nav bar" "increased spacing between section" "increased changes with some text including the title and the order page paragraph"

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   <div class="content-page">
     <div class="main-page">
       <div class="title">
-        <h1>Brendans Handmade Paracord Belts</h1>
+        <h1 class="bv-title-h1">Brendans Paracord Belts</h1>
         <div class="intro">Custom. Handmade. Durable belts</div>
       </div>
         <div class="nav-wrapper">
           <nav class="top-nav-bar med-bold">
-            <a href="https://www.instagram.com/paracord.bv/" target="_blank">Contact Us</a>
+            <img class="hz-belt" src="images/Brendans-logo.png" alt="black paracord belt banner">
+            <a href="https://www.instagram.com/paracord.bv/" target="_blank">Contact Me</a>
             <a href="#key-features" target="_self">Key Features</a>
           </nav>
         </div>
