"fixed nav bar" "made nav bar more responsive"

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </div>
         <div class="nav-wrapper">
           <nav class="top-nav-bar med-bold">
-            <img class="hz-belt" src="images/Brendans-logo.png" alt="black paracord belt banner">
             <a href="https://www.instagram.com/paracord.bv/" target="_blank">Contact Me</a>
+            <img class="hz-belt" src="images/bv-logo-no-margin.png" alt="black paracord belt banner">
             <a href="#key-features" target="_self">Key Features</a>
           </nav>
         </div>
