"added meta description" "updated title element"

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Custom Handmade paracord belts built to last. Rugged, stylish and perfect for anyone">
     <link href="styles.css" rel="stylesheet">
-    <title>Custom Paracord Belts</title>
+    <title>Handmade Paracord Belts - Durable & Customizable</title>
 </head>
 <body>
   <div class="content-page">
